<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home_gradient">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/logo_libreria"
        android:contentDescription="@string/logo_libreria"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvBienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <!-- Mensaje de bienvenida -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bievenida"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/lila_profundo"
        android:gravity="center"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Descriptivo -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_descriptivo"
        android:textSize="16sp"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/lila_profundo"
        android:gravity="center"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvBienvenida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>